remove "description" from footer

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: "Rachel & Alex - July 9th, 2016 - Peaks Island, Portland, ME"
 description: > 
-  Here's a description of our awesome wedding site.
+  The Mekelhammer wedding website.
 baseurl: "" # the subpath of your site, e.g. /blog/
 
 # Build settings
